--- a/wiki/cs/Manual;Introduction.html
+++ b/wiki/cs/Manual;Introduction.html
@@ -15,7 +15,7 @@
 <li><a href="../pt/Manual;Introduction.html" class="mw-pt-progress mw-pt-progress--complete" title="Manual:Introdu&ccedil;&atilde;o (100% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
 <li><a href="../pt-br/Manual;Introduction.html" class="mw-pt-progress mw-pt-progress--complete" title="Manual:Introdu&ccedil;&atilde;o (100% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Manual;Introduction.html" class="mw-pt-progress mw-pt-progress--low" title="Manual:Introducere (14% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../bg/Manual;Introduction.html" class="mw-pt-progress mw-pt-progress--complete" title="&#1059;&#1095;&#1077;&#1073;&#1085;&#1080;&#1082;:&#1042;&#1098;&#1074;&#1077;&#1076;&#1077;&#1085;&#1080;&#1077; (100% translated)" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</a></li>
 <li><a href="../ru/Manual;Introduction.html" class="mw-pt-progress mw-pt-progress--complete" title="&#1056;&#1091;&#1082;&#1086;&#1074;&#1086;&#1076;&#1089;&#1090;&#1074;&#1086;: &#1042;&#1074;&#1077;&#1076;&#1077;&#1085;&#1080;&#1077; (100% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../zh-cn/Manual;Introduction.html" class="mw-pt-progress mw-pt-progress--complete" title="&#25163;&#20876;&#65306;&#24341;&#35328; (100% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
@@ -81,7 +81,7 @@
 <p><a rel="nofollow" class="external text" href="https://www.freecad.org">FreeCAD</a> je otev&#345;en&yacute;, bezplatn&yacute; parametrick&yacute; n&aacute;stroj pro 3D po&#269;&iacute;ta&#269;ov&eacute; navrhov&aacute;n&iacute; (CAD) pou&#382;&iacute;van&yacute; k vytv&aacute;&#345;en&iacute; objekt&#367; od jednoduch&yacute;ch n&aacute;vrh&#367; a&#382; po slo&#382;it&eacute; projekty sest&aacute;vaj&iacute;c&iacute; z rozs&aacute;hl&yacute;ch sestav mnoha d&iacute;l&#367;. D&iacute;ky sv&eacute; otev&#345;en&eacute; povaze lze FreeCAD voln&#283; stahovat, distribuovat, upravovat a pou&#382;&iacute;vat pro osobn&iacute; i komer&#269;n&iacute; &uacute;&#269;ely. Zdrojov&yacute; k&oacute;d je ve&#345;ejn&#283; publikov&aacute;n pod licenc&iacute; <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/GNU_Lesser_General_Public_License">LGPL</a>. D&iacute;ky tomu je FreeCAD atraktivn&iacute; volbou nejen pro relativn&#283; nezku&scaron;en&eacute; u&#382;ivatele, jako jsou nap&#345;&iacute;klad hobbyist&eacute; ve sv&#283;t&#283; 3D tisku, ale tak&eacute; pro zku&scaron;en&eacute; u&#382;ivatele, kte&#345;&iacute; cht&#283;j&iacute; vyzkou&scaron;et jin&yacute; parametrick&yacute; n&aacute;stroj.
 </p><p>Software byl poprv&eacute; vyd&aacute;n v roce 2002, kdy byl je&scaron;t&#283; v plenk&aacute;ch. Od t&eacute; doby se FreeCAD d&iacute;ky neust&aacute;l&yacute;m p&#345;&iacute;sp&#283;vk&#367;m oddan&eacute; komunity v&yacute;voj&aacute;&#345;&#367; a u&#382;ivatel&#367; pomalu, ale jist&#283; rozv&iacute;jel. V&aacute;&scaron;niv&eacute; &uacute;sil&iacute; &#269;etn&yacute;ch p&#345;isp&#283;vatel&#367; nejen zlep&scaron;ilo schopnosti FreeCADu jako CAD n&aacute;stroje, ale tak&eacute; vedlo k v&yacute;voji dal&scaron;&iacute;ch funkc&iacute; v samostatn&yacute;ch oblastech &uacute;zce spjat&yacute;ch se z&aacute;kladn&iacute; sadou FreeCADu. Mezi v&yacute;znamn&eacute; p&#345;&iacute;klady pat&#345;&iacute; pracovn&iacute; prost&#345;ed&iacute; FEM, kter&eacute; umo&#382;&#328;uje prov&aacute;d&#283;n&iacute; jednoduch&eacute; anal&yacute;zy kone&#269;n&yacute;ch prvk&#367;, a tak&eacute; pracovn&iacute; prost&#345;ed&iacute; BIM, kter&eacute; nab&iacute;z&iacute; funkce pro modelov&aacute;n&iacute; stavebn&iacute;ch informac&iacute; (BIM).
 </p><p>Tato u&#382;ivatelsk&aacute; p&#345;&iacute;ru&#269;ka je ps&aacute;na a aktualizov&aacute;na pro verzi <a href="../Release_notes_1.0.html" title="Release notes 1.0">1.0</a> programu FreeCAD. Jeho &uacute;&#269;elem je slou&#382;it jako pr&#367;vodce pro jednotlivce, kte&#345;&iacute; cht&#283;j&iacute; za&#269;&iacute;t pou&#382;&iacute;vat FreeCAD pro sv&eacute; projekty. Nejsou vy&#382;adov&aacute;ny &#382;&aacute;dn&eacute; rozs&aacute;hl&eacute; p&#345;edchoz&iacute; znalosti jak&eacute;hokoli CAD softwaru a obsah t&eacute;to p&#345;&iacute;ru&#269;ky je uspo&#345;&aacute;d&aacute;n p&#345;ehledn&yacute;m a srozumiteln&yacute;m zp&#367;sobem, rozd&#283;len&yacute;m do r&#367;zn&yacute;ch oblast&iacute; pou&#382;it&iacute;. Pr&#367;vodce obsahuje pokyny t&yacute;kaj&iacute;c&iacute; se instalace FreeCADu, pou&#382;&iacute;v&aacute;n&iacute; jeho nejv&yacute;znamn&#283;j&scaron;&iacute;ch pracovn&iacute;ch stol&#367; a roz&scaron;i&#345;uje se i na slo&#382;it&#283;j&scaron;&iacute; t&eacute;mata, jako je skriptov&aacute;n&iacute; v Pythonu. Bylo vynalo&#382;eno &uacute;sil&iacute;, aby byly informace prezentov&aacute;ny p&#345;ehledn&yacute;m zp&#367;sobem, krok za krokem, dopln&#283;n&eacute; obr&aacute;zky. Tato struktura zaji&scaron;&#357;uje, &#382;e z prostudov&aacute;n&iacute; t&eacute;to p&#345;&iacute;ru&#269;ky mohou t&#283;&#382;it jak za&#269;&iacute;naj&iacute;c&iacute; u&#382;ivatel&eacute; CADu, tak i zku&scaron;en&#283;j&scaron;&iacute; u&#382;ivatel&eacute;. Obsah t&eacute;to p&#345;&iacute;ru&#269;ky je publikov&aacute;n pod licenc&iacute; <a rel="nofollow" class="external text" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons 4.0</a> a lze ho voln&#283; pou&#382;&iacute;vat, stahovat, kop&iacute;rovat a upravovat. Manu&aacute;l FreeCAD je neust&aacute;le vylep&scaron;ov&aacute;n d&iacute;ky zku&scaron;enostem a p&#345;&iacute;sp&#283;vk&#367;m u&#382;ivatel&#367;. K dispozici je <a rel="nofollow" class="external text" href="https://wiki.freecad.org/FreeCAD_manual_converter">skript v jazyce Python</a>, kter&yacute; umo&#382;&#328;uje p&#345;ev&eacute;st nejnov&#283;j&scaron;&iacute; verzi t&eacute;to p&#345;&iacute;ru&#269;ky do form&aacute;t&#367; PDF nebo EPUB pro offline &#269;ten&iacute;. 
-</p><p>Another valuable resource is the <a href="../Main_Page.html" title="Main Page">FreeCAD wiki</a>, where numerous contributors have added useful information covering every aspect of the software. Due to the wealth of information available, navigating and using the wiki can be somewhat challenging and overwhelming, especially for new users. For this reason, it is advised to first study the user manual, which offers a more streamlined and smooth introduction, before delving into the more extensive details available in the wiki. Finally, the <a rel="nofollow" class="external text" href="https://forum.freecad.org/">FreeCAD Forums</a> are also very helpful and provide additional support and insights.
+</p><p>Dal&scaron;&iacute;m cenn&yacute;m zdrojem informac&iacute; je <a href="../Main_Page.html" title="Main Page">FreeCAD wiki</a>, kde mnoho p&#345;isp&#283;vatel&#367; p&#345;idalo u&#382;ite&#269;n&eacute; informace pokr&yacute;vaj&iacute;c&iacute; v&scaron;echny aspekty softwaru. Vzhledem k bohatstv&iacute; dostupn&yacute;ch informac&iacute; m&#367;&#382;e b&yacute;t navigace a pou&#382;&iacute;v&aacute;n&iacute; wiki pon&#283;kud n&aacute;ro&#269;n&eacute; a matouc&iacute;, zejm&eacute;na pro nov&eacute; u&#382;ivatele. Z tohoto d&#367;vodu doporu&#269;ujeme nejprve prostudovat u&#382;ivatelskou p&#345;&iacute;ru&#269;ku, kter&aacute; nab&iacute;z&iacute; p&#345;ehledn&#283;j&scaron;&iacute; a plynulej&scaron;&iacute; &uacute;vod, ne&#382; se pust&iacute;te do podrobn&#283;j&scaron;&iacute;ch informac&iacute; dostupn&yacute;ch na wiki. A kone&#269;n&#283; <a rel="nofollow" class="external text" href="https://forum.freecad.org/">f&oacute;ra FreeCADu</a> jsou tak&eacute; velmi u&#382;ite&#269;n&aacute; a poskytuj&iacute; dal&scaron;&iacute; podporu a informace.
 </p><p><br>
 </p>
 <div class="docnav">
@@ -93,29 +93,29 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112012835
+Cached time: 20260112013500
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.056 seconds
-Real time usage: 0.102 seconds
+CPU time usage: 0.064 seconds
+Real time usage: 0.123 seconds
 Preprocessor visited node count: 63/1000000
 Post&#8208;expand include size: 7826/2097152 bytes
 Template argument size: 464/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 4356/5000000 bytes
+Unstrip post&#8208;expand size: 4360/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.026      1 -total
- 70.50%    6.363      1 Template:Manual:TOC
- 47.20%    4.260      1 Manual:Summary/cs
- 25.92%    2.339      2 Template:Docnav
+100.00%   10.389      1 -total
+ 65.10%    6.763      1 Template:Manual:TOC
+ 43.67%    4.537      1 Manual:Summary/cs
+ 31.26%    3.247      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410069-0!canonical and timestamp 20260112012835 and revision id 1736842. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410069-0!canonical and timestamp 20260112013500 and revision id 1736844. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
