--- a/wiki/cs/Manual;What_is_FreeCAD.html
+++ b/wiki/cs/Manual;What_is_FreeCAD.html
@@ -8,19 +8,17 @@
 <li><a href="../pt/Manual;What_is_FreeCAD.html" class="mw-pt-progress mw-pt-progress--complete" title="Manual:O que &eacute; o FreeCAD (100% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
 <li><a href="../pt-br/Manual;What_is_FreeCAD.html" class="mw-pt-progress mw-pt-progress--med" title="Manual:O que &eacute; FreeCAD (45% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Manual;What_is_FreeCAD.html" class="mw-pt-progress mw-pt-progress--med" title="Manual:Ce este FreeCAD (55% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../ru/Manual;What_is_FreeCAD.html" class="mw-pt-progress mw-pt-progress--high" title="&#1056;&#1091;&#1082;&#1086;&#1074;&#1086;&#1076;&#1089;&#1090;&#1074;&#1086;:&#1063;&#1090;&#1086; &#1090;&#1072;&#1082;&#1086;&#1077; FreeCAD (91% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../zh-cn/Manual;What_is_FreeCAD.html" class="mw-pt-progress mw-pt-progress--med" title="&#25163;&#20876;&#65306;FreeCAD &#30340;&#23450;&#20301; (45% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../ja/Manual;What_is_FreeCAD.html" class="mw-pt-progress mw-pt-progress--med" title="&#12510;&#12491;&#12517;&#12450;&#12523;&#65306;FreeCAD&#12392;&#12399; (27% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
 <li><a href="../ko/Manual;What_is_FreeCAD.html" class="mw-pt-progress mw-pt-progress--complete" title="&#49444;&#47749;&#49436;:FreeCAD&#46976;? (100% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Crystal_Clear_manual.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="128" data-file-height="128"></span></span> <a href="../Manual;Introduction.html" title="Manual:Introduction">Manual:Introduction</a></div>
-    <div><a href="../Manual;Installing.html" title="Manual:Installing">Manual:Installing</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Crystal_Clear_manual.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="128" data-file-height="128"></span></span> <a href="../Manual;Introduction.html" title="Manual:Introduction">Manual:&Uacute;vod</a></div>
+    <div><a href="../Manual;Installing.html" title="Manual:Installing">Manual:Instalace</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../Manual;Introduction.html" title="Manual:Introduction">Manual start</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Crystal_Clear_manual.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="128" data-file-height="128"></span></span></div>
-</div>
 </div>
 <div id="toc" class="manualtoc" style="float:right; margin:10px 0px 10px 10px;">
 <ul><li><a href="../Manual;Introduction.html" title="Manual:Introduction">Introduction</a></li>
@@ -117,15 +115,15 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112014156
+Cached time: 20260112014306
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.053 seconds
-Real time usage: 0.091 seconds
-Preprocessor visited node count: 87/1000000
-Post&#8208;expand include size: 8364/2097152 bytes
-Template argument size: 676/2097152 bytes
+CPU time usage: 0.054 seconds
+Real time usage: 0.098 seconds
+Preprocessor visited node count: 86/1000000
+Post&#8208;expand include size: 8340/2097152 bytes
+Template argument size: 660/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -133,13 +131,13 @@ Unstrip post&#8208;expand size: 2899/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.102      1 -total
- 75.87%    6.906      1 Template:Manual:TOC
- 55.28%    5.032      1 Manual:Summary/cs
- 20.88%    1.901      2 Template:Docnav
+100.00%    9.095      1 -total
+ 72.51%    6.595      1 Template:Manual:TOC
+ 52.08%    4.737      1 Manual:Summary/cs
+ 24.52%    2.230      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410569-0!canonical and timestamp 20260112014156 and revision id 1736846. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410569-0!canonical and timestamp 20260112014306 and revision id 1736848. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
