--- a/wiki/cs/Manual;What_is_FreeCAD.html
+++ b/wiki/cs/Manual;What_is_FreeCAD.html
@@ -104,26 +104,24 @@
 </div>
 <p><br>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Crystal_Clear_manual.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="128" data-file-height="128"></span></span> <a href="../Manual;Introduction.html" title="Manual:Introduction">Manual:Introduction</a></div>
-    <div><a href="../Manual;Installing.html" title="Manual:Installing">Manual:Installing</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Crystal_Clear_manual.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="128" data-file-height="128"></span></span> <a href="../Manual;Introduction.html" title="Manual:Introduction">Manual:&Uacute;vod</a></div>
+    <div><a href="../Manual;Installing.html" title="Manual:Installing">Manual:Instalace</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../Manual;Introduction.html" title="Manual:Introduction">Manual start</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Crystal_Clear_manual.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="128" data-file-height="128"></span></span></div>
 </div>
-</div>
 <!-- 
 NewPP limit report
-Cached time: 20260112014306
+Cached time: 20260112014318
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.054 seconds
-Real time usage: 0.098 seconds
-Preprocessor visited node count: 86/1000000
-Post&#8208;expand include size: 8340/2097152 bytes
-Template argument size: 660/2097152 bytes
+CPU time usage: 0.058 seconds
+Real time usage: 0.105 seconds
+Preprocessor visited node count: 85/1000000
+Post&#8208;expand include size: 8316/2097152 bytes
+Template argument size: 644/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -131,13 +129,13 @@ Unstrip post&#8208;expand size: 2899/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.095      1 -total
- 72.51%    6.595      1 Template:Manual:TOC
- 52.08%    4.737      1 Manual:Summary/cs
- 24.52%    2.230      2 Template:Docnav
+100.00%    9.167      1 -total
+ 74.53%    6.832      1 Template:Manual:TOC
+ 56.63%    5.191      1 Manual:Summary/cs
+ 22.08%    2.024      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410569-0!canonical and timestamp 20260112014306 and revision id 1736848. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410569-0!canonical and timestamp 20260112014318 and revision id 1736850. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
