--- a/wiki/cs/Manual;What_is_FreeCAD.html
+++ b/wiki/cs/Manual;What_is_FreeCAD.html
@@ -73,10 +73,8 @@
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_example.png&amp;filetimestamp=20240613202225&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_example.png" decoding="async" width="1849" height="1050" class="mw-file-element" data-file-width="1849" data-file-height="1050"></a></span>
 </p>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>As mentioned in the previous section, FreeCAD is a parametric 3D computer-aided design (CAD) modeling application. <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Parametric_design">Parametric design</a> is a method of designing objects based on defining parameters and relationships between them. In this approach, changes to parameters automatically propagate throughout the associated elements of the design, allowing for rapid iterations and adaptations.
+<p>Jak bylo zm&iacute;n&#283;no v p&#345;edchoz&iacute; sekci, FreeCAD je parametrick&aacute; aplikace pro 3D po&#269;&iacute;ta&#269;ov&eacute; navrhov&aacute;n&iacute; (CAD). <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Parametric_design">Parametrick&eacute; navrhov&aacute;n&iacute;</a> je metoda navrhov&aacute;n&iacute; objekt&#367; na z&aacute;klad&#283; definov&aacute;n&iacute; parametr&#367; a vztah&#367; mezi nimi. V tomto p&#345;&iacute;stupu se zm&#283;ny parametr&#367; automaticky prom&iacute;taj&iacute; do v&scaron;ech souvisej&iacute;c&iacute;ch prvk&#367; n&aacute;vrhu, co&#382; umo&#382;&#328;uje rychl&eacute; iterace a &uacute;pravy. 
 </p>
-</div> 
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Commonly used in fields such as architecture, engineering, and product design, parametric design helps create complex shapes and forms efficiently, with the ability to adjust and fine-tune various design aspects through the modification of input values. This approach is especially powerful in software like FreeCAD, where users can set these parameters dynamically to automate and optimize the design process.
 </p>
@@ -113,13 +111,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112014318
+Cached time: 20260112014452
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.058 seconds
-Real time usage: 0.105 seconds
-Preprocessor visited node count: 85/1000000
+CPU time usage: 0.061 seconds
+Real time usage: 0.114 seconds
+Preprocessor visited node count: 84/1000000
 Post&#8208;expand include size: 8316/2097152 bytes
 Template argument size: 644/2097152 bytes
 Highest expansion depth: 5/100
@@ -129,13 +127,13 @@ Unstrip post&#8208;expand size: 2899/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.167      1 -total
- 74.53%    6.832      1 Template:Manual:TOC
- 56.63%    5.191      1 Manual:Summary/cs
- 22.08%    2.024      2 Template:Docnav
+100.00%   11.738      1 -total
+ 69.83%    8.197      1 Template:Manual:TOC
+ 46.05%    5.405      1 Manual:Summary/cs
+ 27.18%    3.190      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410569-0!canonical and timestamp 20260112014318 and revision id 1736850. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410569-0!canonical and timestamp 20260112014452 and revision id 1736852. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
