--- a/wiki/cs/Manual;What_is_FreeCAD.html
+++ b/wiki/cs/Manual;What_is_FreeCAD.html
@@ -75,11 +75,8 @@
 </div>
 <p>Jak bylo zm&iacute;n&#283;no v p&#345;edchoz&iacute; sekci, FreeCAD je parametrick&aacute; aplikace pro 3D po&#269;&iacute;ta&#269;ov&eacute; navrhov&aacute;n&iacute; (CAD). <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Parametric_design">Parametrick&eacute; navrhov&aacute;n&iacute;</a> je metoda navrhov&aacute;n&iacute; objekt&#367; na z&aacute;klad&#283; definov&aacute;n&iacute; parametr&#367; a vztah&#367; mezi nimi. V tomto p&#345;&iacute;stupu se zm&#283;ny parametr&#367; automaticky prom&iacute;taj&iacute; do v&scaron;ech souvisej&iacute;c&iacute;ch prvk&#367; n&aacute;vrhu, co&#382; umo&#382;&#328;uje rychl&eacute; iterace a &uacute;pravy. 
 </p><p>Parametrick&yacute; n&aacute;vrh, kter&yacute; se b&#283;&#382;n&#283; pou&#382;&iacute;v&aacute; v oblastech jako architektura, stroj&iacute;renstv&iacute; a produktov&yacute; design, pom&aacute;h&aacute; efektivn&#283; vytv&aacute;&#345;et slo&#382;it&eacute; tvary a formy a umo&#382;&#328;uje upravovat a doladit r&#367;zn&eacute; aspekty n&aacute;vrhu prost&#345;ednictv&iacute;m modifikace vstupn&iacute;ch hodnot. Tento p&#345;&iacute;stup je obzvl&aacute;&scaron;t&#283; &uacute;&#269;inn&yacute; v softwaru jako FreeCAD, kde mohou u&#382;ivatel&eacute; tyto parametry nastavovat dynamicky, aby automatizovali a optimalizovali proces n&aacute;vrhu.
+</p><p>FreeCAD je multiplatformn&iacute; aplikace, kter&aacute; b&#283;&#382;&iacute; na Windows, macOS a Linuxu a je zcela <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Open_source">open-source</a>. To znamen&aacute;, &#382;e je zdarma k pou&#382;it&iacute;, &uacute;prav&aacute;m a distribuci. FreeCAD je vyv&iacute;jen nad&scaron;enou komunitou, nikoli jednou spole&#269;nost&iacute;, co&#382; umo&#382;&#328;uje neust&aacute;l&eacute; vylep&scaron;ov&aacute;n&iacute; a aktualizace.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>FreeCAD is a multiplatform application that runs on Windows, macOS, and Linux, and is completely <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Open_source">open-source</a>. This means it is free to use, modify, and distribute. FreeCAD is developed by an enthusiastic community rather than a single company, which allows for constant improvements and updates.
-</p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>The software includes many open-source components and can be integrated into other applications. It is known for being highly customizable and supports a variety of file formats. This flexibility and the robust support from its community make FreeCAD a powerful tool in the open-source world. Developed collectively by a global community of programmers, enthusiasts, and users, FreeCAD exemplifies the collaborative spirit of open-source projects. It offers significant advantages such as customization and scriptability, bringing sophisticated features typically found in professional software within the reach of any user interested in 3D modeling and design.
 </p>
@@ -108,13 +105,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112014524
+Cached time: 20260112014619
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.059 seconds
-Real time usage: 0.156 seconds
-Preprocessor visited node count: 83/1000000
+CPU time usage: 0.061 seconds
+Real time usage: 0.117 seconds
+Preprocessor visited node count: 82/1000000
 Post&#8208;expand include size: 8316/2097152 bytes
 Template argument size: 644/2097152 bytes
 Highest expansion depth: 5/100
@@ -124,13 +121,13 @@ Unstrip post&#8208;expand size: 2899/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.540      1 -total
- 69.97%   11.572      1 Template:Manual:TOC
- 47.41%    7.842      1 Manual:Summary/cs
- 25.93%    4.289      2 Template:Docnav
+100.00%   12.625      1 -total
+ 67.20%    8.484      1 Template:Manual:TOC
+ 49.76%    6.282      1 Manual:Summary/cs
+ 29.56%    3.732      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410569-0!canonical and timestamp 20260112014524 and revision id 1736854. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410569-0!canonical and timestamp 20260112014618 and revision id 1736856. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
